<?xml version="1.0"?>
<package format="2">
  <name>msd700_control</name>
  <version>0.0.0</version>
  <description>The msd700_control package</description>

  <maintainer email="gswt.code@gmail.com">gswt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

  <export>
  </export>
</package>
